@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,6 +16,7 @@
 
 package org.springframework.jmx.export;
 
+import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -23,6 +24,7 @@ import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Stream;
 
 import javax.management.Attribute;
 import javax.management.InstanceNotFoundException;
@@ -55,13 +57,16 @@ import org.springframework.jmx.export.assembler.SimpleReflectiveMBeanInfoAssembl
 import org.springframework.jmx.export.naming.SelfNaming;
 import org.springframework.jmx.support.ObjectNameManager;
 import org.springframework.jmx.support.RegistrationPolicy;
+import org.springframework.util.ReflectionUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
 import static org.assertj.core.api.Assertions.assertThatIllegalArgumentException;
+import static org.assertj.core.api.Assertions.assertThatNoException;
+import static org.assertj.core.api.Assertions.assertThatRuntimeException;
 
 /**
- * Integration tests for the {@link MBeanExporter} class.
+ * Integration tests for {@link MBeanExporter}.
  *
  * @author Rob Harrop
  * @author Juergen Hoeller
@@ -75,41 +80,38 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 	private static final String OBJECT_NAME = "spring:test=jmxMBeanAdaptor";
 
+	private final MBeanExporter exporter = new MBeanExporter();
+
 
 	@Test
-	void testRegisterNullNotificationListenerType() throws Exception {
+	void registerNullNotificationListenerType() throws Exception {
 		Map<String, NotificationListener> listeners = new HashMap<>();
 		// put null in as a value...
 		listeners.put("*", null);
 		MBeanExporter exporter = new MBeanExporter();
 
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				exporter.setNotificationListenerMappings(listeners));
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setNotificationListenerMappings(listeners));
 	}
 
 	@Test
-	void testRegisterNotificationListenerForNonExistentMBean() throws Exception {
-		Map<String, NotificationListener> listeners = new HashMap<>();
-		NotificationListener dummyListener = new NotificationListener() {
-			@Override
-			public void handleNotification(Notification notification, Object handback) {
-				throw new UnsupportedOperationException();
-			}
+	void registerNotificationListenerForNonExistentMBean() throws Exception {
+		NotificationListener dummyListener = (notification, handback) -> {
+			throw new UnsupportedOperationException();
 		};
 		// the MBean with the supplied object name does not exist...
-		listeners.put("spring:type=Test", dummyListener);
-		MBeanExporter exporter = new MBeanExporter();
+		Map<String, NotificationListener> listeners = Map.of("spring:type=Test", dummyListener);
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(server);
 		exporter.setNotificationListenerMappings(listeners);
-		assertThatExceptionOfType(MBeanExportException.class).as("NotificationListener on a non-existent MBean").isThrownBy(() ->
-				start(exporter))
-			.satisfies(ex -> assertThat(ex.contains(InstanceNotFoundException.class)));
+		assertThatExceptionOfType(MBeanExportException.class)
+				.as("NotificationListener on a non-existent MBean")
+				.isThrownBy(() -> start(exporter))
+				.withCauseExactlyInstanceOf(InstanceNotFoundException.class);
 	}
 
 	@Test
-	void testWithSuppliedMBeanServer() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
+	void withSuppliedMBeanServer() throws Exception {
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(server);
 		try {
@@ -123,13 +125,11 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testUserCreatedMBeanRegWithDynamicMBean() throws Exception {
-		Map<String, Object> map = new HashMap<>();
-		map.put("spring:name=dynBean", new TestDynamicMBean());
+	void userCreatedMBeanRegWithDynamicMBean() throws Exception {
+		Map<String, Object> map = Map.of("spring:name=dynBean", new TestDynamicMBean());
 
 		InvokeDetectAssembler asm = new InvokeDetectAssembler();
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(map);
 		exporter.setAssembler(asm);
@@ -146,7 +146,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testAutodetectMBeans() throws Exception {
+	void autodetectMBeans() throws Exception {
 		try (ConfigurableApplicationContext ctx = load("autodetectMBeans.xml")) {
 			ctx.getBean("exporter");
 			MBeanServer server = ctx.getBean("server", MBeanServer.class);
@@ -160,20 +160,20 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testAutodetectWithExclude() throws Exception {
+	void autodetectWithExclude() throws Exception {
 		try (ConfigurableApplicationContext ctx = load("autodetectMBeans.xml")) {
 			ctx.getBean("exporter");
 			MBeanServer server = ctx.getBean("server", MBeanServer.class);
 			ObjectInstance instance = server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=true"));
 			assertThat(instance).isNotNull();
 
-			assertThatExceptionOfType(InstanceNotFoundException.class).isThrownBy(() ->
-					server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=false")));
+			assertThatExceptionOfType(InstanceNotFoundException.class)
+					.isThrownBy(() -> server.getObjectInstance(ObjectNameManager.getInstance("spring:mbean=false")));
 		}
 	}
 
 	@Test
-	void testAutodetectLazyMBeans() throws Exception {
+	void autodetectLazyMBeans() throws Exception {
 		try (ConfigurableApplicationContext ctx = load("autodetectLazyMBeans.xml")) {
 			ctx.getBean("exporter");
 			MBeanServer server = ctx.getBean("server", MBeanServer.class);
@@ -191,18 +191,17 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testAutodetectNoMBeans() throws Exception {
+	void autodetectNoMBeans() throws Exception {
 		try (ConfigurableApplicationContext ctx = load("autodetectNoMBeans.xml")) {
 			ctx.getBean("exporter");
 		}
 	}
 
 	@Test
-	void testWithMBeanExporterListeners() throws Exception {
+	void withMBeanExporterListeners() throws Exception {
 		MockMBeanExporterListener listener1 = new MockMBeanExporterListener();
 		MockMBeanExporterListener listener2 = new MockMBeanExporterListener();
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(server);
 		exporter.setListeners(listener1, listener2);
@@ -214,7 +213,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testExportJdkProxy() throws Exception {
+	void exportJdkProxy() throws Exception {
 		JmxTestBean bean = new JmxTestBean();
 		bean.setName("Rob Harrop");
 
@@ -226,10 +225,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		IJmxTestBean proxy = (IJmxTestBean) factory.getProxy();
 		String name = "bean:mmm=whatever";
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(name, proxy);
+		Map<String, Object> beans = Map.of(name, proxy);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 		exporter.registerBeans();
@@ -240,15 +237,13 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testSelfNaming() throws Exception {
+	void selfNaming() throws Exception {
 		ObjectName objectName = ObjectNameManager.getInstance(OBJECT_NAME);
 		SelfNamingTestBean testBean = new SelfNamingTestBean();
 		testBean.setObjectName(objectName);
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put("foo", testBean);
+		Map<String, Object> beans = Map.of("foo", testBean);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 
@@ -259,7 +254,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testRegisterIgnoreExisting() throws Exception {
+	void registerIgnoreExisting() throws Exception {
 		ObjectName objectName = ObjectNameManager.getInstance(OBJECT_NAME);
 
 		Person preRegistered = new Person();
@@ -272,11 +267,11 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 		String objectName2 = "spring:test=equalBean";
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(objectName.toString(), springRegistered);
-		beans.put(objectName2, springRegistered);
+		Map<String, Object> beans = Map.of(
+				objectName.toString(), springRegistered,
+				objectName2, springRegistered
+			);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 		exporter.setRegistrationPolicy(RegistrationPolicy.IGNORE_EXISTING);
@@ -293,7 +288,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testRegisterReplaceExisting() throws Exception {
+	void registerReplaceExisting() throws Exception {
 		ObjectName objectName = ObjectNameManager.getInstance(OBJECT_NAME);
 
 		Person preRegistered = new Person();
@@ -304,10 +299,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		Person springRegistered = new Person();
 		springRegistered.setName("Sally Greenwood");
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(objectName.toString(), springRegistered);
+		Map<String, Object> beans = Map.of(objectName.toString(), springRegistered);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(server);
 		exporter.setBeans(beans);
 		exporter.setRegistrationPolicy(RegistrationPolicy.REPLACE_EXISTING);
@@ -322,7 +315,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testWithExposeClassLoader() throws Exception {
+	void withExposeClassLoader() throws Exception {
 		String name = "Rob Harrop";
 		String otherName = "Juergen Hoeller";
 
@@ -330,10 +323,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		bean.setName(name);
 		ObjectName objectName = ObjectNameManager.getInstance("spring:type=Test");
 
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(objectName.toString(), bean);
+		Map<String, Object> beans = Map.of(objectName.toString(), bean);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setBeans(beans);
 		exporter.setExposeManagedResourceClassLoader(true);
@@ -341,10 +332,10 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 		assertIsRegistered("Bean instance not registered", objectName);
 
-		Object result = server.invoke(objectName, "add", new Object[] {new Integer(2), new Integer(3)}, new String[] {
+		Object result = server.invoke(objectName, "add", new Object[] {2, 3}, new String[] {
 				int.class.getName(), int.class.getName()});
 
-		assertThat(new Integer(5)).as("Incorrect result return from add").isEqualTo(result);
+		assertThat(Integer.valueOf(5)).as("Incorrect result return from add").isEqualTo(result);
 		assertThat(server.getAttribute(objectName, "Name")).as("Incorrect attribute value").isEqualTo(name);
 
 		server.setAttribute(objectName, new Attribute("Name", otherName));
@@ -352,34 +343,31 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testBonaFideMBeanIsNotExportedWhenAutodetectIsTotallyTurnedOff() throws Exception {
+	void bonaFideMBeanIsNotExportedWhenAutodetectIsTotallyTurnedOff() {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition("^&_invalidObjectName_(*", builder.getBeanDefinition());
 		String exportedBeanName = "export.me.please";
 		factory.registerSingleton(exportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put(OBJECT_NAME, exportedBeanName);
+		Map<String, Object> beansToExport = Map.of(OBJECT_NAME, exportedBeanName);
 		exporter.setBeans(beansToExport);
 		exporter.setServer(getServer());
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_NONE);
+		exporter.setAutodetect(false);
 		// MBean has a bad ObjectName, so if said MBean is autodetected, an exception will be thrown...
 		start(exporter);
-
 	}
 
 	@Test
-	void testOnlyBonaFideMBeanIsExportedWhenAutodetectIsMBeanOnly() throws Exception {
+	@SuppressWarnings("deprecation")
+	void onlyBonaFideMBeanIsExportedWhenAutodetectIsMBeanOnly() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
 		String exportedBeanName = "spring:type=TestBean";
 		factory.registerSingleton(exportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(exportedBeanName));
 		exporter.setBeanFactory(factory);
@@ -393,7 +381,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testBonaFideMBeanAndRegularBeanExporterWithAutodetectAll() throws Exception {
+	@SuppressWarnings("deprecation")
+	void bonaFideMBeanAndRegularBeanExporterWithAutodetectAll() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
@@ -402,7 +391,6 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		String notToBeExportedBeanName = "spring:type=NotToBeExported";
 		factory.registerSingleton(notToBeExportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(exportedBeanName));
 		exporter.setBeanFactory(factory);
@@ -417,14 +405,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testBonaFideMBeanIsNotExportedWithAutodetectAssembler() throws Exception {
+	@SuppressWarnings("deprecation")
+	void bonaFideMBeanIsNotExportedWithAutodetectAssembler() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
 		String exportedBeanName = "spring:type=TestBean";
 		factory.registerSingleton(exportedBeanName, new TestBean());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(exportedBeanName));
 		exporter.setBeanFactory(factory);
@@ -440,15 +428,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	 * Want to ensure that said MBean is not exported twice.
 	 */
 	@Test
-	void testBonaFideMBeanExplicitlyExportedAndAutodetectionIsOn() throws Exception {
+	@SuppressWarnings("deprecation")
+	void bonaFideMBeanExplicitlyExportedAndAutodetectionIsOn() throws Exception {
 		BeanDefinitionBuilder builder = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		factory.registerBeanDefinition(OBJECT_NAME, builder.getBeanDefinition());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put(OBJECT_NAME, OBJECT_NAME);
+		Map<String, Object> beansToExport = Map.of(OBJECT_NAME, OBJECT_NAME);
 		exporter.setBeans(beansToExport);
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(OBJECT_NAME));
 		exporter.setBeanFactory(factory);
@@ -459,61 +446,112 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testSetAutodetectModeToOutOfRangeNegativeValue() {
-		MBeanExporter exporter = new MBeanExporter();
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				exporter.setAutodetectMode(-1));
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToOutOfRangeNegativeValue() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectMode(-1))
+				.withMessage("Only values of autodetect constants allowed");
+		assertThat(exporter.autodetectMode).isNull();
 	}
 
 	@Test
-	void testSetAutodetectModeToOutOfRangePositiveValue() {
-		MBeanExporter exporter = new MBeanExporter();
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				exporter.setAutodetectMode(5));
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToOutOfRangePositiveValue() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectMode(5))
+				.withMessage("Only values of autodetect constants allowed");
+		assertThat(exporter.autodetectMode).isNull();
+	}
+
+	/**
+	 * This test effectively verifies that the internal 'constants' map is properly
+	 * configured for all autodetect constants defined in {@link MBeanExporter}.
+	 */
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToAllSupportedValues() {
+		streamAutodetectConstants()
+				.map(MBeanExporterTests::getFieldValue)
+				.forEach(mode -> assertThatNoException().isThrownBy(() -> exporter.setAutodetectMode(mode)));
 	}
 
 	@Test
-	void testSetAutodetectModeNameToAnEmptyString() {
-		MBeanExporter exporter = new MBeanExporter();
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				exporter.setAutodetectModeName(""));
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeToSupportedValue() {
+		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ASSEMBLER);
+		assertThat(exporter.autodetectMode).isEqualTo(MBeanExporter.AUTODETECT_ASSEMBLER);
 	}
 
 	@Test
-	void testSetAutodetectModeNameToAWhitespacedString() {
-		MBeanExporter exporter = new MBeanExporter();
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				exporter.setAutodetectModeName("  \t"));
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToNull() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName(null))
+				.withMessage("'constantName' must not be null or blank");
+		assertThat(exporter.autodetectMode).isNull();
 	}
 
 	@Test
-	void testSetAutodetectModeNameToARubbishValue() {
-		MBeanExporter exporter = new MBeanExporter();
-		assertThatIllegalArgumentException().isThrownBy(() ->
-				exporter.setAutodetectModeName("That Hansel is... *sssooo* hot right now!"));
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToAnEmptyString() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName(""))
+				.withMessage("'constantName' must not be null or blank");
+		assertThat(exporter.autodetectMode).isNull();
 	}
 
 	@Test
-	void testNotRunningInBeanFactoryAndPassedBeanNameToExport() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
-		Map<String, Object> beans = new HashMap<>();
-		beans.put(OBJECT_NAME, "beanName");
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToWhitespace() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName("  \t"))
+				.withMessage("'constantName' must not be null or blank");
+		assertThat(exporter.autodetectMode).isNull();
+	}
+
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToBogusValue() {
+		assertThatIllegalArgumentException()
+				.isThrownBy(() -> exporter.setAutodetectModeName("Bogus"))
+				.withMessage("Only autodetect constants allowed");
+		assertThat(exporter.autodetectMode).isNull();
+	}
+
+	/**
+	 * This test effectively verifies that the internal 'constants' map is properly
+	 * configured for all autodetect constants defined in {@link MBeanExporter}.
+	 */
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToAllSupportedValues() {
+		streamAutodetectConstants()
+				.map(Field::getName)
+				.forEach(name -> assertThatNoException().isThrownBy(() -> exporter.setAutodetectModeName(name)));
+	}
+
+	@Test
+	@SuppressWarnings("deprecation")
+	void setAutodetectModeNameToSupportedValue() {
+		exporter.setAutodetectModeName("AUTODETECT_ASSEMBLER");
+		assertThat(exporter.autodetectMode).isEqualTo(MBeanExporter.AUTODETECT_ASSEMBLER);
+	}
+
+	@Test
+	void notRunningInBeanFactoryAndPassedBeanNameToExport() {
+		Map<String, Object> beans = Map.of(OBJECT_NAME, "beanName");
 		exporter.setBeans(beans);
-		assertThatExceptionOfType(MBeanExportException.class).isThrownBy(() ->
-				start(exporter));
+		assertThatExceptionOfType(MBeanExportException.class).isThrownBy(() -> start(exporter));
 	}
 
 	@Test
-	void testNotRunningInBeanFactoryAndAutodetectionIsOn() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
-		assertThatExceptionOfType(MBeanExportException.class).isThrownBy(() ->
-				start(exporter));
+	void notRunningInBeanFactoryAndAutodetectionIsOn() {
+		exporter.setAutodetect(true);
+		assertThatExceptionOfType(MBeanExportException.class).isThrownBy(() -> start(exporter));
 	}
 
 	@Test  // SPR-2158
-	void testMBeanIsNotUnregisteredSpuriouslyIfSomeExternalProcessHasUnregisteredMBean() throws Exception {
-		MBeanExporter exporter = new MBeanExporter();
+	void mbeanIsNotUnregisteredSpuriouslyIfSomeExternalProcessHasUnregisteredMBean() throws Exception {
 		exporter.setBeans(getBeanMap());
 		exporter.setServer(this.server);
 		MockMBeanExporterListener listener = new MockMBeanExporterListener();
@@ -524,11 +562,13 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 
 		this.server.unregisterMBean(new ObjectName(OBJECT_NAME));
 		exporter.destroy();
-		assertThat(listener.getUnregistered().size()).as("Listener should not have been invoked (MBean previously unregistered by external agent)").isEqualTo(0);
+		assertThat(listener.getUnregistered())
+				.as("Listener should not have been invoked (MBean previously unregistered by external agent)")
+				.isEmpty();
 	}
 
 	@Test  // SPR-3302
-	void testBeanNameCanBeUsedInNotificationListenersMap() throws Exception {
+	void beanNameCanBeUsedInNotificationListenersMap() {
 		String beanName = "charlesDexterWard";
 		BeanDefinitionBuilder testBean = BeanDefinitionBuilder.rootBeanDefinition(JmxTestBean.class);
 
@@ -537,10 +577,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		factory.preInstantiateSingletons();
 		Object testBeanInstance = factory.getBean(beanName);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put("test:what=ever", testBeanInstance);
+		Map<String, Object> beansToExport = Map.of("test:what=ever", testBeanInstance);
 		exporter.setBeans(beansToExport);
 		exporter.setBeanFactory(factory);
 		StubNotificationListener listener = new StubNotificationListener();
@@ -550,7 +588,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testWildcardCanBeUsedInNotificationListenersMap() throws Exception {
+	void wildcardCanBeUsedInNotificationListenersMap() {
 		String beanName = "charlesDexterWard";
 		BeanDefinitionBuilder testBean = BeanDefinitionBuilder.rootBeanDefinition(JmxTestBean.class);
 
@@ -559,10 +597,8 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		factory.preInstantiateSingletons();
 		Object testBeanInstance = factory.getBean(beanName);
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put("test:what=ever", testBeanInstance);
+		Map<String, Object> beansToExport = Map.of("test:what=ever", testBeanInstance);
 		exporter.setBeans(beansToExport);
 		exporter.setBeanFactory(factory);
 		StubNotificationListener listener = new StubNotificationListener();
@@ -572,7 +608,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test  // SPR-3625
-	void testMBeanIsUnregisteredForRuntimeExceptionDuringInitialization() throws Exception {
+	void mbeanIsUnregisteredForRuntimeExceptionDuringInitialization() throws Exception {
 		BeanDefinitionBuilder builder1 = BeanDefinitionBuilder.rootBeanDefinition(Person.class);
 		BeanDefinitionBuilder builder2 = BeanDefinitionBuilder
 				.rootBeanDefinition(RuntimeExceptionThrowingConstructorBean.class);
@@ -584,16 +620,16 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		factory.registerBeanDefinition(objectName1, builder1.getBeanDefinition());
 		factory.registerBeanDefinition(objectName2, builder2.getBeanDefinition());
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
-		Map<String, Object> beansToExport = new HashMap<>();
-		beansToExport.put(objectName1, objectName1);
-		beansToExport.put(objectName2, objectName2);
+		Map<String, Object> beansToExport = Map.of(
+				objectName1, objectName1,
+				objectName2, objectName2
+			);
 		exporter.setBeans(beansToExport);
 		exporter.setBeanFactory(factory);
 
-		assertThatExceptionOfType(RuntimeException.class).as("failed during creation of RuntimeExceptionThrowingConstructorBean").isThrownBy(() ->
-				start(exporter));
+		assertThatRuntimeException().as("failed during creation of RuntimeExceptionThrowingConstructorBean")
+				.isThrownBy(() -> start(exporter));
 
 		assertIsNotRegistered("Must have unregistered all previously registered MBeans due to RuntimeException",
 				ObjectNameManager.getInstance(objectName1));
@@ -602,36 +638,33 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testIgnoreBeanName() throws MalformedObjectNameException {
+	void ignoreBeanName() throws MalformedObjectNameException {
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
 		String firstBeanName = "spring:type=TestBean";
 		factory.registerSingleton(firstBeanName, new TestBean("test"));
 		String secondBeanName = "spring:type=TestBean2";
 		factory.registerSingleton(secondBeanName, new TestBean("test2"));
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setAssembler(new NamedBeanAutodetectCapableMBeanInfoAssemblerStub(firstBeanName, secondBeanName));
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
+		exporter.setAutodetect(true);
 		exporter.addExcludedBean(secondBeanName);
 
 		start(exporter);
-		assertIsRegistered("Bean not autodetected in (AUTODETECT_ALL) mode",
-				ObjectNameManager.getInstance(firstBeanName));
-		assertIsNotRegistered("Bean should have been excluded",
-				ObjectNameManager.getInstance(secondBeanName));
+		assertIsRegistered("Bean not autodetected", ObjectNameManager.getInstance(firstBeanName));
+		assertIsNotRegistered("Bean should have been excluded", ObjectNameManager.getInstance(secondBeanName));
 	}
 
 	@Test
-	void testRegisterFactoryBean() throws MalformedObjectNameException {
+	void registerFactoryBean() throws MalformedObjectNameException {
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
-		factory.registerBeanDefinition("spring:type=FactoryBean", new RootBeanDefinition(ProperSomethingFactoryBean.class));
+		factory.registerBeanDefinition("spring:type=FactoryBean",
+				new RootBeanDefinition(ProperSomethingFactoryBean.class));
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
+		exporter.setAutodetect(true);
 
 		start(exporter);
 		assertIsRegistered("Non-null FactoryBean object registered",
@@ -639,14 +672,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 	@Test
-	void testIgnoreNullObjectFromFactoryBean() throws MalformedObjectNameException {
+	void ignoreNullObjectFromFactoryBean() throws MalformedObjectNameException {
 		DefaultListableBeanFactory factory = new DefaultListableBeanFactory();
-		factory.registerBeanDefinition("spring:type=FactoryBean", new RootBeanDefinition(NullSomethingFactoryBean.class));
+		factory.registerBeanDefinition("spring:type=FactoryBean",
+				new RootBeanDefinition(NullSomethingFactoryBean.class));
 
-		MBeanExporter exporter = new MBeanExporter();
 		exporter.setServer(getServer());
 		exporter.setBeanFactory(factory);
-		exporter.setAutodetectMode(MBeanExporter.AUTODETECT_ALL);
+		exporter.setAutodetect(true);
 
 		start(exporter);
 		assertIsNotRegistered("Null FactoryBean object not registered",
@@ -658,16 +691,14 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		return new ClassPathXmlApplicationContext(context, getClass());
 	}
 
-	private Map<String, Object> getBeanMap() {
-		Map<String, Object> map = new HashMap<>();
-		map.put(OBJECT_NAME, new JmxTestBean());
-		return map;
+	private static Map<String, Object> getBeanMap() {
+		return Map.of(OBJECT_NAME, new JmxTestBean());
 	}
 
-	private void assertListener(MockMBeanExporterListener listener) throws MalformedObjectNameException {
+	private static void assertListener(MockMBeanExporterListener listener) throws MalformedObjectNameException {
 		ObjectName desired = ObjectNameManager.getInstance(OBJECT_NAME);
-		assertThat(listener.getRegistered().size()).as("Incorrect number of registrations").isEqualTo(1);
-		assertThat(listener.getUnregistered().size()).as("Incorrect number of unregistrations").isEqualTo(1);
+		assertThat(listener.getRegistered()).as("Incorrect number of registrations").hasSize(1);
+		assertThat(listener.getUnregistered()).as("Incorrect number of unregistrations").hasSize(1);
 		assertThat(listener.getRegistered().get(0)).as("Incorrect ObjectName in register").isEqualTo(desired);
 		assertThat(listener.getUnregistered().get(0)).as("Incorrect ObjectName in unregister").isEqualTo(desired);
 	}
@@ -681,6 +712,21 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 		public ModelMBeanInfo getMBeanInfo(Object managedResource, String beanKey) throws JMException {
 			invoked = true;
 			return null;
+		}
+	}
+
+	private static Stream<Field> streamAutodetectConstants() {
+		return Arrays.stream(MBeanExporter.class.getFields())
+				.filter(ReflectionUtils::isPublicStaticFinal)
+				.filter(field -> field.getName().startsWith("AUTODETECT_"));
+	}
+
+	private static Integer getFieldValue(Field field) {
+		try {
+			return (Integer) field.get(null);
+		}
+		catch (Exception ex) {
+			throw new RuntimeException(ex);
 		}
 	}
 
@@ -726,7 +772,7 @@ public class MBeanExporterTests extends AbstractMBeanServerTests {
 	}
 
 
-	public static interface PersonMBean {
+	public interface PersonMBean {
 
 		String getName();
 	}
