@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2018 the original author or authors.
+ * Copyright 2002-2021 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,10 +16,7 @@
 
 package org.springframework.core.convert.support;
 
-import java.nio.Buffer;
 import java.nio.ByteBuffer;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.Set;
 
 import org.springframework.core.convert.ConversionService;
@@ -41,17 +38,11 @@ final class ByteBufferConverter implements ConditionalGenericConverter {
 
 	private static final TypeDescriptor BYTE_ARRAY_TYPE = TypeDescriptor.valueOf(byte[].class);
 
-	private static final Set<ConvertiblePair> CONVERTIBLE_PAIRS;
-
-	static {
-		Set<ConvertiblePair> convertiblePairs = new HashSet<>(4);
-		convertiblePairs.add(new ConvertiblePair(ByteBuffer.class, byte[].class));
-		convertiblePairs.add(new ConvertiblePair(byte[].class, ByteBuffer.class));
-		convertiblePairs.add(new ConvertiblePair(ByteBuffer.class, Object.class));
-		convertiblePairs.add(new ConvertiblePair(Object.class, ByteBuffer.class));
-		CONVERTIBLE_PAIRS = Collections.unmodifiableSet(convertiblePairs);
-	}
-
+	private static final Set<ConvertiblePair> CONVERTIBLE_PAIRS = Set.of(
+				new ConvertiblePair(ByteBuffer.class, byte[].class),
+				new ConvertiblePair(byte[].class, ByteBuffer.class),
+				new ConvertiblePair(ByteBuffer.class, Object.class),
+				new ConvertiblePair(Object.class, ByteBuffer.class));
 
 	private final ConversionService conversionService;
 
@@ -89,8 +80,7 @@ final class ByteBufferConverter implements ConditionalGenericConverter {
 	@Nullable
 	public Object convert(@Nullable Object source, TypeDescriptor sourceType, TypeDescriptor targetType) {
 		boolean byteBufferTarget = targetType.isAssignableTo(BYTE_BUFFER_TYPE);
-		if (source instanceof ByteBuffer) {
-			ByteBuffer buffer = (ByteBuffer) source;
+		if (source instanceof ByteBuffer buffer) {
 			return (byteBufferTarget ? buffer.duplicate() : convertFromByteBuffer(buffer, targetType));
 		}
 		if (byteBufferTarget) {
@@ -122,10 +112,7 @@ final class ByteBufferConverter implements ConditionalGenericConverter {
 		ByteBuffer byteBuffer = ByteBuffer.allocate(bytes.length);
 		byteBuffer.put(bytes);
 
-		// Extra cast necessary for compiling on JDK 9 plus running on JDK 8, since
-		// otherwise the overridden ByteBuffer-returning rewind method would be chosen
-		// which isn't available on JDK 8.
-		return ((Buffer) byteBuffer).rewind();
+		return byteBuffer.rewind();
 	}
 
 }
