@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -25,7 +25,6 @@ import java.nio.charset.StandardCharsets;
 import java.time.ZoneId;
 import java.util.AbstractList;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Currency;
@@ -41,6 +40,7 @@ import java.util.Properties;
 import java.util.Set;
 import java.util.TimeZone;
 import java.util.UUID;
+import java.util.regex.Pattern;
 import java.util.stream.Stream;
 
 import org.junit.jupiter.api.Test;
@@ -50,16 +50,18 @@ import org.springframework.core.convert.ConversionFailedException;
 import org.springframework.core.convert.ConverterNotFoundException;
 import org.springframework.core.convert.TypeDescriptor;
 import org.springframework.core.convert.support.DefaultConversionService;
+import org.springframework.lang.Nullable;
 import org.springframework.util.ClassUtils;
 
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatExceptionOfType;
+import static org.assertj.core.api.Assertions.entry;
 
 /**
  * Unit tests for {@link DefaultConversionService}.
  *
  * <p>In this package for enforcing accessibility checks to non-public classes outside
- * of the {@code org.springframework.core.convert.support} implementation package.
+ * the {@code org.springframework.core.convert.support} implementation package.
  * Only in such a scenario, {@code setAccessible(true)} is actually necessary.
  *
  * @author Keith Donald
@@ -79,7 +81,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void stringToCharacterEmptyString() {
-		assertThat(conversionService.convert("", Character.class)).isEqualTo(null);
+		assertThat(conversionService.convert("", Character.class)).isNull();
 	}
 
 	@Test
@@ -95,29 +97,29 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void stringToBooleanTrue() {
-		assertThat(conversionService.convert("true", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("on", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("yes", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("1", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("TRUE", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("ON", Boolean.class)).isEqualTo(true);
-		assertThat(conversionService.convert("YES", Boolean.class)).isEqualTo(true);
+		assertThat(conversionService.convert("true", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("on", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("yes", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("1", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("TRUE", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("ON", Boolean.class)).isTrue();
+		assertThat(conversionService.convert("YES", Boolean.class)).isTrue();
 	}
 
 	@Test
 	void stringToBooleanFalse() {
-		assertThat(conversionService.convert("false", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("off", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("no", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("0", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("FALSE", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("OFF", Boolean.class)).isEqualTo(false);
-		assertThat(conversionService.convert("NO", Boolean.class)).isEqualTo(false);
+		assertThat(conversionService.convert("false", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("off", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("no", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("0", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("FALSE", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("OFF", Boolean.class)).isFalse();
+		assertThat(conversionService.convert("NO", Boolean.class)).isFalse();
 	}
 
 	@Test
 	void stringToBooleanEmptyString() {
-		assertThat(conversionService.convert("", Boolean.class)).isEqualTo(null);
+		assertThat(conversionService.convert("", Boolean.class)).isNull();
 	}
 
 	@Test
@@ -154,7 +156,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void stringToInteger() {
-		assertThat(conversionService.convert("1", Integer.class)).isEqualTo((int) Integer.valueOf(1));
+		assertThat(conversionService.convert("1", Integer.class)).isEqualTo(1);
 	}
 
 	@Test
@@ -219,7 +221,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void stringToNumberEmptyString() {
-		assertThat(conversionService.convert("", Number.class)).isEqualTo(null);
+		assertThat(conversionService.convert("", Number.class)).isNull();
 	}
 
 	@Test
@@ -234,7 +236,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void stringToEnumEmptyString() {
-		assertThat(conversionService.convert("", Foo.class)).isEqualTo(null);
+		assertThat(conversionService.convert("", Foo.class)).isNull();
 	}
 
 	@Test
@@ -254,12 +256,12 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void integerToEnumNull() {
-		assertThat(conversionService.convert(null, Foo.class)).isEqualTo(null);
+		assertThat(conversionService.convert(null, Foo.class)).isNull();
 	}
 
 	@Test
 	void enumToInteger() {
-		assertThat(conversionService.convert(Foo.BAR, Integer.class)).isEqualTo((int) Integer.valueOf(0));
+		assertThat(conversionService.convert(Foo.BAR, Integer.class)).isEqualTo(0);
 	}
 
 	@Test
@@ -318,14 +320,32 @@ class DefaultConversionServiceTests {
 	}
 
 	@Test
+	void stringToPatternEmptyString() {
+		assertThat(conversionService.convert("", Pattern.class)).isNull();
+	}
+
+	@Test
+	void stringToPattern() {
+		String pattern = "\\s";
+		assertThat(conversionService.convert(pattern, Pattern.class))
+				.isInstanceOfSatisfying(Pattern.class, regex -> assertThat(regex.pattern()).isEqualTo(pattern));
+	}
+
+	@Test
+	void patternToString() {
+		String regex = "\\d";
+		assertThat(conversionService.convert(Pattern.compile(regex), String.class)).isEqualTo(regex);
+	}
+
+	@Test
 	void numberToNumber() {
 		assertThat(conversionService.convert(1, Long.class)).isEqualTo(Long.valueOf(1));
 	}
 
 	@Test
 	void numberToNumberNotSupportedNumber() {
-		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
-				conversionService.convert(1, CustomNumber.class));
+		assertThatExceptionOfType(ConversionFailedException.class)
+				.isThrownBy(() -> conversionService.convert(1, CustomNumber.class));
 	}
 
 	@Test
@@ -342,20 +362,32 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertArrayToCollectionInterface() {
-		List<?> result = conversionService.convert(new String[] {"1", "2", "3"}, List.class);
-		assertThat(result.get(0)).isEqualTo("1");
-		assertThat(result.get(1)).isEqualTo("2");
-		assertThat(result.get(2)).isEqualTo("3");
+		@SuppressWarnings("unchecked")
+		Collection<String> result = conversionService.convert(new String[] {"1", "2", "3"}, Collection.class);
+		assertThat(result).isEqualTo(List.of("1", "2", "3"));
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
+	}
+
+	@Test
+	void convertArrayToSetInterface() {
+		@SuppressWarnings("unchecked")
+		Collection<String> result = conversionService.convert(new String[] {"1", "2", "3"}, Set.class);
+		assertThat(result).isExactlyInstanceOf(LinkedHashSet.class).containsExactly("1", "2", "3");
+	}
+
+	@Test
+	void convertArrayToListInterface() {
+		@SuppressWarnings("unchecked")
+		List<String> result = conversionService.convert(new String[] {"1", "2", "3"}, List.class);
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	void convertArrayToCollectionGenericTypeConversion() throws Exception {
 		@SuppressWarnings("unchecked")
-		List<Integer> result = (List<Integer>) conversionService.convert(new String[] {"1", "2", "3"}, TypeDescriptor
-				.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericList")));
-		assertThat((int) result.get(0)).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result.get(1)).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result.get(2)).isEqualTo((int) Integer.valueOf(3));
+		List<Integer> result = (List<Integer>) conversionService.convert(new String[] {"1", "2", "3"},
+				TypeDescriptor.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericList")));
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly(1, 2, 3);
 	}
 
 	@Test
@@ -363,36 +395,31 @@ class DefaultConversionServiceTests {
 		String[] source = {"1", "3", "4"};
 		@SuppressWarnings("unchecked")
 		Stream<Integer> result = (Stream<Integer>) this.conversionService.convert(source,
-				TypeDescriptor.valueOf(String[].class),
-				new TypeDescriptor(getClass().getDeclaredField("genericStream")));
-		assertThat(result.mapToInt(x -> x).sum()).isEqualTo(8);
+				TypeDescriptor.valueOf(String[].class), new TypeDescriptor(getClass().getDeclaredField("genericStream")));
+		assertThat(result).containsExactly(1, 3, 4);
 	}
 
 	@Test
 	void spr7766() throws Exception {
-		ConverterRegistry registry = (conversionService);
-		registry.addConverter(new ColorConverter());
+		conversionService.addConverter(new ColorConverter());
 		@SuppressWarnings("unchecked")
 		List<Color> colors = (List<Color>) conversionService.convert(new String[] {"ffffff", "#000000"},
 				TypeDescriptor.valueOf(String[].class),
 				new TypeDescriptor(new MethodParameter(getClass().getMethod("handlerMethod", List.class), 0)));
-		assertThat(colors.size()).isEqualTo(2);
-		assertThat(colors.get(0)).isEqualTo(Color.WHITE);
-		assertThat(colors.get(1)).isEqualTo(Color.BLACK);
+		assertThat(colors).containsExactly(Color.WHITE, Color.BLACK);
 	}
 
 	@Test
 	void convertArrayToCollectionImpl() {
-		ArrayList<?> result = conversionService.convert(new String[] {"1", "2", "3"}, ArrayList.class);
-		assertThat(result.get(0)).isEqualTo("1");
-		assertThat(result.get(1)).isEqualTo("2");
-		assertThat(result.get(2)).isEqualTo("3");
+		@SuppressWarnings("unchecked")
+		ArrayList<String> result = conversionService.convert(new String[] {"1", "2", "3"}, ArrayList.class);
+		assertThat(result).isExactlyInstanceOf(ArrayList.class).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	void convertArrayToAbstractCollection() {
-		assertThatExceptionOfType(ConversionFailedException.class).isThrownBy(() ->
-				conversionService.convert(new String[]{"1", "2", "3"}, AbstractList.class));
+		assertThatExceptionOfType(ConversionFailedException.class)
+				.isThrownBy(() -> conversionService.convert(new String[]{"1", "2", "3"}, AbstractList.class));
 	}
 
 	@Test
@@ -410,40 +437,31 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertEmptyArrayToString() {
 		String result = conversionService.convert(new String[0], String.class);
-		assertThat(result).isEqualTo("");
+		assertThat(result).isEmpty();
 	}
 
 	@Test
 	void convertStringToArray() {
 		String[] result = conversionService.convert("1,2,3", String[].class);
-		assertThat(result.length).isEqualTo(3);
-		assertThat(result[0]).isEqualTo("1");
-		assertThat(result[1]).isEqualTo("2");
-		assertThat(result[2]).isEqualTo("3");
+		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	void convertStringToArrayWithElementConversion() {
 		Integer[] result = conversionService.convert("1,2,3", Integer[].class);
-		assertThat(result.length).isEqualTo(3);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertStringToPrimitiveArrayWithElementConversion() {
 		int[] result = conversionService.convert("1,2,3", int[].class);
-		assertThat(result.length).isEqualTo(3);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertEmptyStringToArray() {
 		String[] result = conversionService.convert("", String[].class);
-		assertThat(result.length).isEqualTo(0);
+		assertThat(result).isEmpty();
 	}
 
 	@Test
@@ -457,7 +475,7 @@ class DefaultConversionServiceTests {
 	void convertArrayToObjectWithElementConversion() {
 		String[] array = new String[] {"3"};
 		Integer result = conversionService.convert(array, Integer.class);
-		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).isEqualTo(3);
 	}
 
 	@Test
@@ -470,51 +488,39 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertObjectToArray() {
 		Object[] result = conversionService.convert(3L, Object[].class);
-		assertThat(result.length).isEqualTo(1);
-		assertThat(result[0]).isEqualTo(3L);
+		assertThat(result).containsExactly(3L);
 	}
 
 	@Test
 	void convertObjectToArrayWithElementConversion() {
 		Integer[] result = conversionService.convert(3L, Integer[].class);
-		assertThat(result.length).isEqualTo(1);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(3);
 	}
 
 	@Test
 	void convertCollectionToArray() {
-		List<String> list = new ArrayList<>();
-		list.add("1");
-		list.add("2");
-		list.add("3");
+		List<String> list = List.of("1", "2", "3");
 		String[] result = conversionService.convert(list, String[].class);
-		assertThat(result[0]).isEqualTo("1");
-		assertThat(result[1]).isEqualTo("2");
-		assertThat(result[2]).isEqualTo("3");
+		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	void convertCollectionToArrayWithElementConversion() {
-		List<String> list = new ArrayList<>();
-		list.add("1");
-		list.add("2");
-		list.add("3");
+		List<String> list = List.of("1", "2", "3");
 		Integer[] result = conversionService.convert(list, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertCollectionToString() {
-		List<String> list = Arrays.asList("foo", "bar");
+		List<String> list = List.of("foo", "bar");
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("foo,bar");
 	}
 
 	@Test
 	void convertCollectionToStringWithElementConversion() throws Exception {
-		List<Integer> list = Arrays.asList(3, 5);
+		List<Integer> list = List.of(3, 5);
 		String result = (String) conversionService.convert(list,
 				new TypeDescriptor(getClass().getField("genericList")), TypeDescriptor.valueOf(String.class));
 		assertThat(result).isEqualTo("3,5");
@@ -522,56 +528,49 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertStringToCollection() {
-		List<?> result = conversionService.convert("1,2,3", List.class);
-		assertThat(result.size()).isEqualTo(3);
-		assertThat(result.get(0)).isEqualTo("1");
-		assertThat(result.get(1)).isEqualTo("2");
-		assertThat(result.get(2)).isEqualTo("3");
+		@SuppressWarnings("unchecked")
+		List<String> result = conversionService.convert("1,2,3", List.class);
+		assertThat(result).containsExactly("1", "2", "3");
 	}
 
 	@Test
 	void convertStringToCollectionWithElementConversion() throws Exception {
-		List<?> result = (List<?>) conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class),
+		@SuppressWarnings("unchecked")
+		List<Integer> result = (List<Integer>) conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class),
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(result.size()).isEqualTo(3);
-		assertThat(result.get(0)).isEqualTo(1);
-		assertThat(result.get(1)).isEqualTo(2);
-		assertThat(result.get(2)).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertEmptyStringToCollection() {
 		Collection<?> result = conversionService.convert("", Collection.class);
-		assertThat(result.size()).isEqualTo(0);
+		assertThat(result).isEmpty();
 	}
 
 	@Test
 	void convertCollectionToObject() {
 		List<Long> list = Collections.singletonList(3L);
 		Long result = conversionService.convert(list, Long.class);
-		assertThat(result).isEqualTo(Long.valueOf(3));
+		assertThat(result).isEqualTo(3L);
 	}
 
 	@Test
 	void convertCollectionToObjectWithElementConversion() {
 		List<String> list = Collections.singletonList("3");
 		Integer result = conversionService.convert(list, Integer.class);
-		assertThat((int) result).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).isEqualTo(3);
 	}
 
 	@Test
 	void convertCollectionToObjectAssignableTarget() throws Exception {
-		Collection<String> source = new ArrayList<>();
-		source.add("foo");
+		Collection<String> source = List.of("foo");
 		Object result = conversionService.convert(source, new TypeDescriptor(getClass().getField("assignableTarget")));
-		assertThat(result).isEqualTo(source);
+		assertThat(result).isSameAs(source);
 	}
 
 	@Test
 	void convertCollectionToObjectWithCustomConverter() {
-		List<String> source = new ArrayList<>();
-		source.add("A");
-		source.add("B");
+		List<String> source = List.of("A", "B");
 		conversionService.addConverter(List.class, ListWrapper.class, ListWrapper::new);
 		ListWrapper result = conversionService.convert(source, ListWrapper.class);
 		assertThat(result.getList()).isSameAs(source);
@@ -579,9 +578,9 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertObjectToCollection() {
-		List<?> result = conversionService.convert(3L, List.class);
-		assertThat(result.size()).isEqualTo(1);
-		assertThat(result.get(0)).isEqualTo(3L);
+		@SuppressWarnings("unchecked")
+		List<Long> result = conversionService.convert(3L, List.class);
+		assertThat(result).containsExactly(3L);
 	}
 
 	@Test
@@ -589,61 +588,48 @@ class DefaultConversionServiceTests {
 		@SuppressWarnings("unchecked")
 		List<Integer> result = (List<Integer>) conversionService.convert(3L, TypeDescriptor.valueOf(Long.class),
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(result.size()).isEqualTo(1);
-		assertThat((int) result.get(0)).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(3);
 	}
 
 	@Test
 	void convertStringArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new String[] {"1", "2", "3"}, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertStringArrayToIntArray() {
 		int[] result = conversionService.convert(new String[] {"1", "2", "3"}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertIntegerArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new Integer[] {1, 2, 3}, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertIntegerArrayToIntArray() {
 		int[] result = conversionService.convert(new Integer[] {1, 2, 3}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertObjectArrayToIntegerArray() {
 		Integer[] result = conversionService.convert(new Object[] {1, 2, 3}, Integer[].class);
-		assertThat((int) result[0]).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) result[1]).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) result[2]).isEqualTo((int) Integer.valueOf(3));
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertObjectArrayToIntArray() {
 		int[] result = conversionService.convert(new Object[] {1, 2, 3}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertByteArrayToWrapperArray() {
-		byte[] byteArray = new byte[] {1, 2, 3};
+		byte[] byteArray = {1, 2, 3};
 		Byte[] converted = conversionService.convert(byteArray, Byte[].class);
 		assertThat(converted).isEqualTo(new Byte[]{1, 2, 3});
 	}
@@ -651,28 +637,26 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertArrayToArrayAssignable() {
 		int[] result = conversionService.convert(new int[] {1, 2, 3}, int[].class);
-		assertThat(result[0]).isEqualTo(1);
-		assertThat(result[1]).isEqualTo(2);
-		assertThat(result[2]).isEqualTo(3);
+		assertThat(result).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void convertListOfNonStringifiable() {
-		List<Object> list = Arrays.asList(new TestEntity(1L), new TestEntity(2L));
+		List<Object> list = List.of(new TestEntity(1L), new TestEntity(2L));
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		try {
 			conversionService.convert(list, String.class);
 		}
 		catch (ConversionFailedException ex) {
-			assertThat(ex.getMessage().contains(list.getClass().getName())).isTrue();
-			assertThat(ex.getCause() instanceof ConverterNotFoundException).isTrue();
-			assertThat(ex.getCause().getMessage().contains(TestEntity.class.getName())).isTrue();
+			assertThat(ex.getMessage()).contains(list.getClass().getName());
+			assertThat(ex.getCause()).isInstanceOf(ConverterNotFoundException.class);
+			assertThat(ex.getCause().getMessage()).contains(TestEntity.class.getName());
 		}
 	}
 
 	@Test
 	void convertListOfStringToString() {
-		List<String> list = Arrays.asList("Foo", "Bar");
+		List<String> list = List.of("Foo", "Bar");
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("Foo,Bar");
@@ -680,9 +664,9 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertListOfListToString() {
-		List<String> list1 = Arrays.asList("Foo", "Bar");
-		List<String> list2 = Arrays.asList("Baz", "Boop");
-		List<List<String>> list = Arrays.asList(list1, list2);
+		List<String> list1 = List.of("Foo", "Bar");
+		List<String> list2 = List.of("Baz", "Boop");
+		List<List<String>> list = List.of(list1, list2);
 		assertThat(conversionService.canConvert(list.getClass(), String.class)).isTrue();
 		String result = conversionService.convert(list, String.class);
 		assertThat(result).isEqualTo("Foo,Bar,Baz,Boop");
@@ -695,11 +679,9 @@ class DefaultConversionServiceTests {
 		foo.add("2");
 		foo.add("3");
 		@SuppressWarnings("unchecked")
-		List<Integer> bar = (List<Integer>) conversionService.convert(foo, TypeDescriptor.forObject(foo),
+		List<Integer> bar = (List<Integer>) conversionService.convert(foo,
 				new TypeDescriptor(getClass().getField("genericList")));
-		assertThat((int) bar.get(0)).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) bar.get(1)).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) bar.get(2)).isEqualTo((int) Integer.valueOf(3));
+		assertThat(bar).containsExactly(1, 2, 3);
 	}
 
 	@Test
@@ -707,21 +689,18 @@ class DefaultConversionServiceTests {
 		@SuppressWarnings("unchecked")
 		List<Integer> bar = (List<Integer>) conversionService.convert(null,
 				TypeDescriptor.valueOf(LinkedHashSet.class), new TypeDescriptor(getClass().getField("genericList")));
-		assertThat((Object) bar).isNull();
+		assertThat(bar).isNull();
 	}
 
 	@Test
-	@SuppressWarnings("rawtypes")
+	@SuppressWarnings({ "rawtypes", "unchecked" })
 	void convertCollectionToCollectionNotGeneric() {
 		Set<String> foo = new LinkedHashSet<>();
 		foo.add("1");
 		foo.add("2");
 		foo.add("3");
-		List bar = (List) conversionService.convert(foo, TypeDescriptor.valueOf(LinkedHashSet.class), TypeDescriptor
-				.valueOf(List.class));
-		assertThat(bar.get(0)).isEqualTo("1");
-		assertThat(bar.get(1)).isEqualTo("2");
-		assertThat(bar.get(2)).isEqualTo("3");
+		List bar = (List) conversionService.convert(foo, TypeDescriptor.valueOf(LinkedHashSet.class), TypeDescriptor.valueOf(List.class));
+		assertThat(bar).containsExactly("1", "2", "3");
 	}
 
 	@Test
@@ -734,34 +713,25 @@ class DefaultConversionServiceTests {
 		Collection values = map.values();
 		List<Integer> bar = (List<Integer>) conversionService.convert(values,
 				TypeDescriptor.forObject(values), new TypeDescriptor(getClass().getField("genericList")));
-		assertThat(bar.size()).isEqualTo(3);
-		assertThat((int) bar.get(0)).isEqualTo((int) Integer.valueOf(1));
-		assertThat((int) bar.get(1)).isEqualTo((int) Integer.valueOf(2));
-		assertThat((int) bar.get(2)).isEqualTo((int) Integer.valueOf(3));
+		assertThat(bar).containsExactly(1, 2, 3);
 	}
 
 	@Test
 	void collection() {
-		List<String> strings = new ArrayList<>();
-		strings.add("3");
-		strings.add("9");
+		List<String> strings = List.of("3", "9");
 		@SuppressWarnings("unchecked")
 		List<Integer> integers = (List<Integer>) conversionService.convert(strings,
 				TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(Integer.class)));
-		assertThat((int) integers.get(0)).isEqualTo((int) Integer.valueOf(3));
-		assertThat((int) integers.get(1)).isEqualTo((int) Integer.valueOf(9));
+		assertThat(integers).containsExactly(3, 9);
 	}
 
 	@Test
 	void convertMapToMap() throws Exception {
-		Map<String, String> foo = new HashMap<>();
-		foo.put("1", "BAR");
-		foo.put("2", "BAZ");
+		Map<String, String> foo = Map.of("1", "BAR", "2", "BAZ");
 		@SuppressWarnings("unchecked")
 		Map<Integer, Foo> map = (Map<Integer, Foo>) conversionService.convert(foo,
 				TypeDescriptor.forObject(foo), new TypeDescriptor(getClass().getField("genericMap")));
-		assertThat(map.get(1)).isEqualTo(Foo.BAR);
-		assertThat(map.get(2)).isEqualTo(Foo.BAZ);
+		assertThat(map).contains(entry(1, Foo.BAR), entry(2, Foo.BAZ));
 	}
 
 	@Test
@@ -769,8 +739,9 @@ class DefaultConversionServiceTests {
 		Map<String, Integer> hashMap = new LinkedHashMap<>();
 		hashMap.put("1", 1);
 		hashMap.put("2", 2);
-		List<?> converted = conversionService.convert(hashMap.values(), List.class);
-		assertThat(converted).isEqualTo(Arrays.asList(1, 2));
+		@SuppressWarnings("unchecked")
+		List<Integer> converted = conversionService.convert(hashMap.values(), List.class);
+		assertThat(converted).containsExactly(1, 2);
 	}
 
 	@Test
@@ -781,8 +752,7 @@ class DefaultConversionServiceTests {
 		@SuppressWarnings("unchecked")
 		Map<Integer, Integer> integers = (Map<Integer, Integer>) conversionService.convert(strings,
 				TypeDescriptor.map(Map.class, TypeDescriptor.valueOf(Integer.class), TypeDescriptor.valueOf(Integer.class)));
-		assertThat((int) integers.get(3)).isEqualTo((int) Integer.valueOf(9));
-		assertThat((int) integers.get(6)).isEqualTo((int) Integer.valueOf(31));
+		assertThat(integers).contains(entry(3, 9), entry(6, 31));
 	}
 
 	@Test
@@ -791,25 +761,25 @@ class DefaultConversionServiceTests {
 		foo.setProperty("1", "BAR");
 		foo.setProperty("2", "BAZ");
 		String result = conversionService.convert(foo, String.class);
-		assertThat(result.contains("1=BAR")).isTrue();
-		assertThat(result.contains("2=BAZ")).isTrue();
+		assertThat(result).contains("1=BAR", "2=BAZ");
 	}
 
 	@Test
 	void convertStringToProperties() {
-		Properties result = conversionService.convert("a=b\nc=2\nd=", Properties.class);
-		assertThat(result.size()).isEqualTo(3);
-		assertThat(result.getProperty("a")).isEqualTo("b");
-		assertThat(result.getProperty("c")).isEqualTo("2");
-		assertThat(result.getProperty("d")).isEqualTo("");
+		Properties result = conversionService.convert("""
+				a=b
+				c=2
+				d=""", Properties.class);
+		assertThat(result).contains(entry("a", "b"), entry("c", "2"), entry("d", ""));
 	}
 
 	@Test
-	void convertStringToPropertiesWithSpaces() {
-		Properties result = conversionService.convert("   foo=bar\n   bar=baz\n    baz=boop", Properties.class);
-		assertThat(result.get("foo")).isEqualTo("bar");
-		assertThat(result.get("bar")).isEqualTo("baz");
-		assertThat(result.get("baz")).isEqualTo("boop");
+	void convertStringToPropertiesWithLeadingSpaces() {
+		Properties result = conversionService.convert("""
+				\s  foo=bar
+				\s   bar=baz
+				\s    baz=boo""", Properties.class);
+		assertThat(result).contains(entry("foo", "bar"), entry("bar", "baz"), entry("baz", "boo"));
 	}
 
 	// generic object conversion
@@ -824,6 +794,9 @@ class DefaultConversionServiceTests {
 		assertThat(ISBN.toStringCount).as("toString() invocations").isEqualTo(1);
 	}
 
+	/**
+	 * @see org.springframework.core.convert.support.ObjectToObjectConverterTests
+	 */
 	@Test
 	void convertObjectToObjectUsingValueOfMethod() {
 		ISBN.reset();
@@ -860,7 +833,7 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertObjectToStringWithJavaTimeOfMethodPresent() {
-		assertThat(conversionService.convert(ZoneId.of("GMT+1"), String.class).startsWith("GMT+")).isTrue();
+		assertThat(conversionService.convert(ZoneId.of("GMT+1"), String.class)).startsWith("GMT+");
 	}
 
 	@Test
@@ -875,8 +848,8 @@ class DefaultConversionServiceTests {
 
 	@Test
 	void convertObjectToObjectNoValueOfMethodOrConstructor() {
-		assertThatExceptionOfType(ConverterNotFoundException.class).isThrownBy(() ->
-				conversionService.convert(Long.valueOf(3), SSN.class));
+		assertThatExceptionOfType(ConverterNotFoundException.class)
+				.isThrownBy(() -> conversionService.convert(3L, SSN.class));
 	}
 
 	@Test
@@ -907,21 +880,20 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertStringToCharArray() {
 		char[] converted = conversionService.convert("a,b,c", char[].class);
-		assertThat(converted).isEqualTo(new char[]{'a', 'b', 'c'});
+		assertThat(converted).containsExactly('a', 'b', 'c');
 	}
 
 	@Test
 	void convertStringToCustomCharArray() {
 		conversionService.addConverter(String.class, char[].class, String::toCharArray);
 		char[] converted = conversionService.convert("abc", char[].class);
-		assertThat(converted).isEqualTo(new char[] {'a', 'b', 'c'});
+		assertThat(converted).containsExactly('a', 'b', 'c');
 	}
 
 	@Test
 	@SuppressWarnings("unchecked")
 	void multidimensionalArrayToListConversionShouldConvertEntriesCorrectly() {
-		String[][] grid = new String[][] {new String[] {"1", "2", "3", "4"}, new String[] {"5", "6", "7", "8"},
-				new String[] {"9", "10", "11", "12"}};
+		String[][] grid = new String[][] {{"1", "2", "3", "4"}, {"5", "6", "7", "8"}, {"9", "10", "11", "12"}};
 		List<String[]> converted = conversionService.convert(grid, List.class);
 		String[][] convertedBack = conversionService.convert(converted, String[][].class);
 		assertThat(convertedBack).isEqualTo(grid);
@@ -930,10 +902,10 @@ class DefaultConversionServiceTests {
 	@Test
 	void convertCannotOptimizeArray() {
 		conversionService.addConverter(Byte.class, Byte.class, source -> (byte) (source + 1));
-		byte[] byteArray = new byte[] {1, 2, 3};
+		byte[] byteArray = {1, 2, 3};
 		byte[] converted = conversionService.convert(byteArray, byte[].class);
 		assertThat(converted).isNotSameAs(byteArray);
-		assertThat(converted).isEqualTo(new byte[]{2, 3, 4});
+		assertThat(converted).containsExactly(2, 3, 4);
 	}
 
 	@Test
@@ -944,7 +916,7 @@ class DefaultConversionServiceTests {
 		TypeDescriptor descriptor = new TypeDescriptor(parameter);
 		Object actual = conversionService.convert("1,2,3", TypeDescriptor.valueOf(String.class), descriptor);
 		assertThat(actual.getClass()).isEqualTo(Optional.class);
-		assertThat(((Optional<List<Integer>>) actual).get()).isEqualTo(Arrays.asList(1, 2, 3));
+		assertThat(((Optional<List<Integer>>) actual)).contains(List.of(1, 2, 3));
 	}
 
 	@Test
@@ -1095,11 +1067,10 @@ class DefaultConversionServiceTests {
 		}
 
 		@Override
-		public boolean equals(Object o) {
-			if (!(o instanceof SSN)) {
+		public boolean equals(@Nullable Object o) {
+			if (!(o instanceof SSN ssn)) {
 				return false;
 			}
-			SSN ssn = (SSN) o;
 			return this.value.equals(ssn.value);
 		}
 
@@ -1136,11 +1107,10 @@ class DefaultConversionServiceTests {
 		}
 
 		@Override
-		public boolean equals(Object o) {
-			if (!(o instanceof ISBN)) {
+		public boolean equals(@Nullable Object o) {
+			if (!(o instanceof ISBN isbn)) {
 				return false;
 			}
-			ISBN isbn = (ISBN) o;
 			return this.value.equals(isbn.value);
 		}
 
