@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2020 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,9 +17,7 @@
 package org.springframework.http.codec.multipart;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -56,9 +54,10 @@ public class MultipartHttpMessageReader extends LoggingCodecSupport
 	private static final ResolvableType MULTIPART_VALUE_TYPE = ResolvableType.forClassWithGenerics(
 			MultiValueMap.class, String.class, Part.class);
 
-	static final List<MediaType> MIME_TYPES = Collections.unmodifiableList(Arrays.asList(
-			MediaType.MULTIPART_FORM_DATA, MediaType.MULTIPART_MIXED, MediaType.MULTIPART_RELATED));
-
+	static final List<MediaType> MIME_TYPES = List.of(
+			MediaType.MULTIPART_FORM_DATA,
+			MediaType.MULTIPART_MIXED,
+			MediaType.MULTIPART_RELATED);
 
 	private final HttpMessageReader<Part> partReader;
 
@@ -84,19 +83,20 @@ public class MultipartHttpMessageReader extends LoggingCodecSupport
 
 	@Override
 	public boolean canRead(ResolvableType elementType, @Nullable MediaType mediaType) {
-		if (MULTIPART_VALUE_TYPE.isAssignableFrom(elementType)) {
-			if (mediaType == null) {
+		return supportsMediaType(mediaType) && MULTIPART_VALUE_TYPE.isAssignableFrom(elementType);
+	}
+
+	private boolean supportsMediaType(@Nullable MediaType mediaType) {
+		if (mediaType == null) {
+			return true;
+		}
+		for (MediaType supportedMediaType : MIME_TYPES) {
+			if (supportedMediaType.isCompatibleWith(mediaType)) {
 				return true;
-			}
-			for (MediaType supportedMediaType : MIME_TYPES) {
-				if (supportedMediaType.isCompatibleWith(mediaType)) {
-					return true;
-				}
 			}
 		}
 		return false;
 	}
-
 
 	@Override
 	public Flux<MultiValueMap<String, Part>> read(ResolvableType elementType,
@@ -130,7 +130,7 @@ public class MultipartHttpMessageReader extends LoggingCodecSupport
 	}
 
 	private List<Part> toList(Collection<Part> collection) {
-		return collection instanceof List ? (List<Part>) collection : new ArrayList<>(collection);
+		return (collection instanceof List<Part> list ? list : new ArrayList<>(collection));
 	}
 
 }
