@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,7 +19,6 @@ package org.springframework.web.bind.support;
 import java.util.List;
 import java.util.Map;
 import java.util.TreeMap;
-import java.util.stream.Collectors;
 
 import reactor.core.publisher.Mono;
 
@@ -35,6 +34,15 @@ import org.springframework.web.server.ServerWebExchange;
 /**
  * Specialized {@link org.springframework.validation.DataBinder} to perform data
  * binding from URL query parameters or form data in the request data to Java objects.
+ *
+ * <p><strong>WARNING</strong>: Data binding can lead to security issues by exposing
+ * parts of the object graph that are not meant to be accessed or modified by
+ * external clients. Therefore the design and use of data binding should be considered
+ * carefully with regard to security. For more details, please refer to the dedicated
+ * sections on data binding for
+ * <a href="https://docs.spring.io/spring-framework/docs/current/reference/html/web.html#mvc-ann-initbinder-model-design">Spring Web MVC</a> and
+ * <a href="https://docs.spring.io/spring-framework/docs/current/reference/html/web-reactive.html#webflux-ann-initbinder-model-design">Spring WebFlux</a>
+ * in the reference manual.
  *
  * @author Rossen Stoyanchev
  * @author Juergen Hoeller
@@ -64,19 +72,38 @@ public class WebExchangeDataBinder extends WebDataBinder {
 
 
 	/**
-	 * Bind query parameters, form data, or multipart form data to the binder target.
-	 * @param exchange the current exchange
-	 * @return a {@code Mono<Void>} when binding is complete
+	 * Use a default or single data constructor to create the target by
+	 * binding request parameters, multipart files, or parts to constructor args.
+	 * <p>After the call, use {@link #getBindingResult()} to check for bind errors.
+	 * If there are none, the target is set, and {@link #bind} can be called for
+	 * further initialization via setters.
+	 * @param exchange the request to bind
+	 * @return a {@code Mono<Void>} that completes when the target is created
+	 * @since 6.1
 	 */
-	public Mono<Void> bind(ServerWebExchange exchange) {
+	public Mono<Void> construct(ServerWebExchange exchange) {
 		return getValuesToBind(exchange)
-				.doOnNext(values -> doBind(new MutablePropertyValues(values)))
+				.doOnNext(map -> construct(new MapValueResolver(map)))
 				.then();
 	}
 
 	/**
-	 * Protected method to obtain the values for data binding. By default this
-	 * method delegates to {@link #extractValuesToBind(ServerWebExchange)}.
+	 * Bind query parameters, form data, or multipart form data to the binder target.
+	 * @param exchange the current exchange
+	 * @return a {@code Mono<Void>} that completes when binding is complete
+	 */
+	public Mono<Void> bind(ServerWebExchange exchange) {
+		if (shouldNotBindPropertyValues()) {
+			return Mono.empty();
+		}
+		return getValuesToBind(exchange)
+				.doOnNext(map -> doBind(new MutablePropertyValues(map)))
+				.then();
+	}
+
+	/**
+	 * Obtain the values for data binding. By default, this delegates to
+	 * {@link #extractValuesToBind(ServerWebExchange)}.
 	 * @param exchange the current exchange
 	 * @return a map of bind values
 	 * @since 5.3
@@ -114,9 +141,21 @@ public class WebExchangeDataBinder extends WebDataBinder {
 	protected static void addBindValue(Map<String, Object> params, String key, List<?> values) {
 		if (!CollectionUtils.isEmpty(values)) {
 			values = values.stream()
-					.map(value -> value instanceof FormFieldPart ? ((FormFieldPart) value).value() : value)
-					.collect(Collectors.toList());
+					.map(value -> value instanceof FormFieldPart formFieldPart ? formFieldPart.value() : value)
+					.toList();
 			params.put(key, values.size() == 1 ? values.get(0) : values);
+		}
+	}
+
+
+	/**
+	 * Resolve values from a map.
+	 */
+	private record MapValueResolver(Map<String, Object> map) implements ValueResolver {
+
+		@Override
+		public Object resolveValue(String name, Class<?> type) {
+			return this.map.get(name);
 		}
 	}
 
