@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2021 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,7 +20,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import org.reactivestreams.Publisher;
 import reactor.core.publisher.Flux;
@@ -137,6 +136,9 @@ public abstract class BodyExtractors {
 
 	/**
 	 * Extractor to read multipart data into a {@code MultiValueMap<String, Part>}.
+	 * <p><strong>Note:</strong> that resources used for part handling,
+	 * like storage for the uploaded files, is not deleted automatically, but
+	 * should be done via {@link Part#delete()}.
 	 * @return {@code BodyExtractor} for multipart data
 	 */
 	// Parameterized for server-side use
@@ -151,6 +153,9 @@ public abstract class BodyExtractors {
 
 	/**
 	 * Extractor to read multipart data into {@code Flux<Part>}.
+	 * <p><strong>Note:</strong> that resources used for part handling,
+	 * like storage for the uploaded files, is not deleted automatically, but
+	 * should be done via {@link Part#delete()}.
 	 * @return {@code BodyExtractor} for multipart request parts
 	 */
 	// Parameterized for server-side use
@@ -189,18 +194,16 @@ public abstract class BodyExtractors {
 		MediaType contentType = Optional.ofNullable(message.getHeaders().getContentType())
 				.orElse(MediaType.APPLICATION_OCTET_STREAM);
 
-		return context.messageReaders().stream()
-				.filter(reader -> reader.canRead(elementType, contentType))
-				.findFirst()
-				.map(BodyExtractors::<T>cast)
-				.map(readerFunction)
-				.orElseGet(() -> {
-					List<MediaType> mediaTypes = context.messageReaders().stream()
-							.flatMap(reader -> reader.getReadableMediaTypes(elementType).stream())
-							.collect(Collectors.toList());
-					return errorFunction.apply(
-							new UnsupportedMediaTypeException(contentType, mediaTypes, elementType));
-				});
+		for (HttpMessageReader<?> messageReader : context.messageReaders()) {
+			if (messageReader.canRead(elementType, contentType)) {
+				return readerFunction.apply(cast(messageReader));
+			}
+		}
+		List<MediaType> mediaTypes = context.messageReaders().stream()
+				.flatMap(reader -> reader.getReadableMediaTypes(elementType).stream())
+				.toList();
+		return errorFunction.apply(
+				new UnsupportedMediaTypeException(contentType, mediaTypes, elementType));
 	}
 
 	private static <T> Mono<T> readToMono(ReactiveHttpInputMessage message, BodyExtractor.Context context,
@@ -224,7 +227,7 @@ public abstract class BodyExtractors {
 
 		Flux<T> result;
 		if (message.getHeaders().getContentType() == null) {
-			// Maybe it's okay there is no content type, if there is no content..
+			// Maybe it's okay there is no content type, if there is no content.
 			result = message.getBody().map(buffer -> {
 				DataBufferUtils.release(buffer);
 				throw ex;
@@ -240,12 +243,13 @@ public abstract class BodyExtractors {
 	private static <T> HttpMessageReader<T> findReader(
 			ResolvableType elementType, MediaType mediaType, BodyExtractor.Context context) {
 
-		return context.messageReaders().stream()
-				.filter(messageReader -> messageReader.canRead(elementType, mediaType))
-				.findFirst()
-				.map(BodyExtractors::<T>cast)
-				.orElseThrow(() -> new IllegalStateException(
-						"No HttpMessageReader for \"" + mediaType + "\" and \"" + elementType + "\""));
+		for (HttpMessageReader<?> messageReader : context.messageReaders()) {
+			if (messageReader.canRead(elementType, mediaType)) {
+				return cast(messageReader);
+			}
+		}
+		throw new IllegalStateException(
+						"No HttpMessageReader for \"" + mediaType + "\" and \"" + elementType + "\"");
 	}
 
 	@SuppressWarnings("unchecked")
