@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -17,8 +17,6 @@
 package org.springframework.web.reactive.result;
 
 import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Comparator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Set;
@@ -33,6 +31,7 @@ import org.springframework.core.ReactiveAdapterRegistry;
 import org.springframework.http.MediaType;
 import org.springframework.lang.Nullable;
 import org.springframework.util.Assert;
+import org.springframework.util.MimeTypeUtils;
 import org.springframework.web.reactive.HandlerMapping;
 import org.springframework.web.reactive.HandlerResult;
 import org.springframework.web.reactive.accept.RequestedContentTypeResolver;
@@ -49,7 +48,7 @@ import org.springframework.web.server.ServerWebExchange;
 public abstract class HandlerResultHandlerSupport implements Ordered {
 
 	private static final List<MediaType> ALL_APPLICATION_MEDIA_TYPES =
-			Arrays.asList(MediaType.ALL, new MediaType("application"));
+			List.of(MediaType.ALL, new MediaType("application"));
 
 
 	protected final Log logger = LogFactory.getLog(getClass());
@@ -88,7 +87,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	/**
 	 * Set the order for this result handler relative to others.
 	 * <p>By default set to {@link Ordered#LOWEST_PRECEDENCE}, however see
-	 * Javadoc of sub-classes which may change this default.
+	 * Javadoc of subclasses which may change this default.
 	 * @param order the order
 	 */
 	public void setOrder(int order) {
@@ -111,14 +110,25 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 	}
 
 	/**
-	 * Select the best media type for the current request through a content negotiation algorithm.
+	 * Select the best media type for the current request through a content
+	 * negotiation algorithm.
 	 * @param exchange the current request
-	 * @param producibleTypesSupplier the media types that can be produced for the current request
+	 * @param producibleTypesSupplier the media types producible for the request
 	 * @return the selected media type, or {@code null} if none
 	 */
 	@Nullable
+	protected MediaType selectMediaType(ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier) {
+		return selectMediaType(exchange, producibleTypesSupplier, getAcceptableTypes(exchange));
+	}
+
+	/**
+	 * Variant of {@link #selectMediaType(ServerWebExchange, Supplier)} with a
+	 * given list of requested (acceptable) media types.
+	 */
+	@Nullable
 	protected MediaType selectMediaType(
-			ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier) {
+			ServerWebExchange exchange, Supplier<List<MediaType>> producibleTypesSupplier,
+			List<MediaType> acceptableTypes) {
 
 		MediaType contentType = exchange.getResponse().getHeaders().getContentType();
 		if (contentType != null && contentType.isConcrete()) {
@@ -128,7 +138,6 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 			return contentType;
 		}
 
-		List<MediaType> acceptableTypes = getAcceptableTypes(exchange);
 		List<MediaType> producibleTypes = getProducibleTypes(exchange, producibleTypesSupplier);
 
 		Set<MediaType> compatibleMediaTypes = new LinkedHashSet<>();
@@ -141,7 +150,7 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 		}
 
 		List<MediaType> result = new ArrayList<>(compatibleMediaTypes);
-		MediaType.sortBySpecificityAndQuality(result);
+		MimeTypeUtils.sortBySpecificity(result);
 
 		MediaType selected = null;
 		for (MediaType mediaType : result) {
@@ -183,8 +192,12 @@ public abstract class HandlerResultHandlerSupport implements Ordered {
 
 	private MediaType selectMoreSpecificMediaType(MediaType acceptable, MediaType producible) {
 		producible = producible.copyQualityValue(acceptable);
-		Comparator<MediaType> comparator = MediaType.SPECIFICITY_COMPARATOR;
-		return (comparator.compare(acceptable, producible) <= 0 ? acceptable : producible);
+		if (acceptable.isLessSpecific(producible)) {
+			return producible;
+		}
+		else {
+			return acceptable;
+		}
 	}
 
 }
