@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,25 +16,26 @@
 
 package org.springframework.web.reactive.resource;
 
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mockito;
 import reactor.test.StepVerifier;
 
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
-import org.springframework.util.StringUtils;
 import org.springframework.web.reactive.resource.EncodedResourceResolver.EncodedResource;
 import org.springframework.web.reactive.resource.GzipSupport.GzippedFiles;
 import org.springframework.web.testfixture.server.MockServerWebExchange;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 import static org.springframework.web.testfixture.http.server.reactive.MockServerHttpRequest.get;
 
 /**
@@ -44,18 +45,16 @@ import static org.springframework.web.testfixture.http.server.reactive.MockServe
  * @author Sam Brannen
  */
 @ExtendWith(GzipSupport.class)
-public class CssLinkResourceTransformerTests {
+class CssLinkResourceTransformerTests {
 
 	private ResourceTransformerChain transformerChain;
 
 
 	@BeforeEach
-	public void setup() {
+	void setup() {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.setStrategyMap(Collections.singletonMap("/**", new ContentVersionStrategy()));
-		List<ResourceResolver> resolvers = new ArrayList<>();
-		resolvers.add(versionResolver);
-		resolvers.add(new PathResourceResolver());
+		List<ResourceResolver> resolvers = List.of(versionResolver, new PathResourceResolver());
 
 		CssLinkResourceTransformer cssLinkTransformer = new CssLinkResourceTransformer();
 		cssLinkTransformer.setResourceUrlProvider(createUrlProvider(resolvers));
@@ -66,41 +65,43 @@ public class CssLinkResourceTransformerTests {
 
 	private ResourceUrlProvider createUrlProvider(List<ResourceResolver> resolvers) {
 		ResourceWebHandler handler = new ResourceWebHandler();
-		handler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
+		handler.setLocations(List.of(new ClassPathResource("test/", getClass())));
 		handler.setResourceResolvers(resolvers);
 
 		ResourceUrlProvider urlProvider = new ResourceUrlProvider();
-		urlProvider.registerHandlers(Collections.singletonMap("/static/**", handler));
+		urlProvider.registerHandlers(Map.of("/static/**", handler));
 		return urlProvider;
 	}
 
 
 	@Test
-	public void transform() {
-
+	void transform() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/main.css"));
 		Resource css = getResource("main.css");
-		String expected = "\n" +
-				"@import url(\"/static/bar-11e16cf79faee7ac698c805cf28248d2.css?#iefix\");\n" +
-				"@import url('/static/bar-11e16cf79faee7ac698c805cf28248d2.css#bla-normal');\n" +
-				"@import url(/static/bar-11e16cf79faee7ac698c805cf28248d2.css);\n\n" +
-				"@import \"/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css\";\n" +
-				"@import '/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css';\n\n" +
-				"body { background: url(\"/static/images/image-f448cd1d5dba82b774f3202c878230b3.png?#iefix\") }\n";
+		String expected = """
+
+				@import url("/static/bar-11e16cf79faee7ac698c805cf28248d2.css?#iefix");
+				@import url('/static/bar-11e16cf79faee7ac698c805cf28248d2.css#bla-normal');
+				@import url(/static/bar-11e16cf79faee7ac698c805cf28248d2.css);
+
+				@import "/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css";
+				@import '/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css';
+
+				body { background: url("/static/images/image-f448cd1d5dba82b774f3202c878230b3.png?#iefix") }
+				""";
 
 		StepVerifier.create(this.transformerChain.transform(exchange, css)
 				.cast(TransformedResource.class))
 				.consumeNextWith(transformedResource -> {
-					String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-					result = StringUtils.deleteAny(result, "\r");
-					assertThat(result).isEqualTo(expected);
+					String result = new String(transformedResource.getByteArray(), UTF_8);
+					assertThat(result).isEqualToNormalizingNewlines(expected);
 				})
 				.expectComplete()
 				.verify();
 	}
 
 	@Test
-	public void transformNoLinks() {
+	void transformNoLinks() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/foo.css"));
 		Resource expected = getResource("foo.css");
 
@@ -110,36 +111,36 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformExtLinksNotAllowed() {
+	void transformExtLinksNotAllowed() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/external.css"));
 
 		List<ResourceTransformer> transformers = Collections.singletonList(new CssLinkResourceTransformer());
-		ResourceResolverChain mockChain = Mockito.mock(DefaultResourceResolverChain.class);
+		ResourceResolverChain mockChain = mock();
 		ResourceTransformerChain chain = new DefaultResourceTransformerChain(mockChain, transformers);
 
 		Resource resource = getResource("external.css");
-		String expected = "@import url(\"https://example.org/fonts/css\");\n" +
-				"body { background: url(\"file:///home/spring/image.png\") }\n" +
-				"figure { background: url(\"//example.org/style.css\")}";
+		String expected = """
+				@import url("https://example.org/fonts/css");
+				body { background: url("file:///home/spring/image.png") }
+				figure { background: url("//example.org/style.css")}""";
 
 		StepVerifier.create(chain.transform(exchange, resource)
 				.cast(TransformedResource.class))
 				.consumeNextWith(transformedResource -> {
-					String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-					result = StringUtils.deleteAny(result, "\r");
-					assertThat(result).isEqualTo(expected);
+					String result = new String(transformedResource.getByteArray(), UTF_8);
+					assertThat(result).isEqualToNormalizingNewlines(expected);
 				})
 				.expectComplete()
 				.verify();
 
 		List<Resource> locations = Collections.singletonList(resource);
-		Mockito.verify(mockChain, Mockito.never()).resolveUrlPath("https://example.org/fonts/css", locations);
-		Mockito.verify(mockChain, Mockito.never()).resolveUrlPath("file:///home/spring/image.png", locations);
-		Mockito.verify(mockChain, Mockito.never()).resolveUrlPath("//example.org/style.css", locations);
+		verify(mockChain, never()).resolveUrlPath("https://example.org/fonts/css", locations);
+		verify(mockChain, never()).resolveUrlPath("file:///home/spring/image.png", locations);
+		verify(mockChain, never()).resolveUrlPath("//example.org/style.css", locations);
 	}
 
 	@Test
-	public void transformSkippedForNonCssResource() {
+	void transformSkippedForNonCssResource() {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/images/image.png"));
 		Resource expected = getResource("images/image.png");
 
@@ -150,7 +151,7 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformSkippedForGzippedResource(GzippedFiles gzippedFiles) throws Exception {
+	void transformSkippedForGzippedResource(GzippedFiles gzippedFiles) throws Exception {
 		gzippedFiles.create("main.css");
 
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/main.css"));
@@ -164,20 +165,19 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test // https://github.com/spring-projects/spring-framework/issues/22602
-	public void transformEmptyUrlFunction() throws Exception {
+	void transformEmptyUrlFunction() throws Exception {
 		MockServerWebExchange exchange = MockServerWebExchange.from(get("/static/empty_url_function.css"));
 		Resource css = getResource("empty_url_function.css");
-		String expected =
-				".fooStyle {\n" +
-				"\tbackground: transparent url() no-repeat left top;\n" +
-				"}";
+		String expected = """
+						.fooStyle {
+							background: transparent url() no-repeat left top;
+						}""";
 
 		StepVerifier.create(this.transformerChain.transform(exchange, css)
 				.cast(TransformedResource.class))
 				.consumeNextWith(transformedResource -> {
-					String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-					result = StringUtils.deleteAny(result, "\r");
-					assertThat(result).isEqualTo(expected);
+					String result = new String(transformedResource.getByteArray(), UTF_8);
+					assertThat(result).isEqualToNormalizingNewlines(expected);
 				})
 				.expectComplete()
 				.verify();
