@@ -1,5 +1,5 @@
 /*
- * Copyright 2002-2019 the original author or authors.
+ * Copyright 2002-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -16,24 +16,25 @@
 
 package org.springframework.web.servlet.resource;
 
-import java.nio.charset.StandardCharsets;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.Mockito;
 
 import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
-import org.springframework.util.StringUtils;
 import org.springframework.web.servlet.resource.EncodedResourceResolver.EncodedResource;
 import org.springframework.web.servlet.resource.GzipSupport.GzippedFiles;
 import org.springframework.web.testfixture.servlet.MockHttpServletRequest;
 
+import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
+import static org.mockito.Mockito.verify;
 
 /**
  * Unit tests for {@link CssLinkResourceTransformer}.
@@ -44,7 +45,7 @@ import static org.assertj.core.api.Assertions.assertThat;
  * @since 4.1
  */
 @ExtendWith(GzipSupport.class)
-public class CssLinkResourceTransformerTests {
+class CssLinkResourceTransformerTests {
 
 	private ResourceTransformerChain transformerChain;
 
@@ -52,14 +53,12 @@ public class CssLinkResourceTransformerTests {
 
 
 	@BeforeEach
-	public void setUp() {
+	void setUp() {
 		VersionResourceResolver versionResolver = new VersionResourceResolver();
 		versionResolver.setStrategyMap(Collections.singletonMap("/**", new ContentVersionStrategy()));
 		PathResourceResolver pathResolver = new PathResourceResolver();
 		pathResolver.setAllowedLocations(new ClassPathResource("test/", getClass()));
-		List<ResourceResolver> resolvers = new ArrayList<>();
-		resolvers.add(versionResolver);
-		resolvers.add(new PathResourceResolver());
+		List<ResourceResolver> resolvers = List.of(versionResolver, new PathResourceResolver());
 		ResourceUrlProvider resourceUrlProvider = createUrlProvider(resolvers);
 
 		CssLinkResourceTransformer cssLinkTransformer = new CssLinkResourceTransformer();
@@ -72,34 +71,37 @@ public class CssLinkResourceTransformerTests {
 	private ResourceUrlProvider createUrlProvider(List<ResourceResolver> resolvers) {
 		ResourceHttpRequestHandler resourceHandler = new ResourceHttpRequestHandler();
 		resourceHandler.setResourceResolvers(resolvers);
-		resourceHandler.setLocations(Collections.singletonList(new ClassPathResource("test/", getClass())));
+		resourceHandler.setLocations(List.of(new ClassPathResource("test/", getClass())));
 
 		ResourceUrlProvider resourceUrlProvider = new ResourceUrlProvider();
-		resourceUrlProvider.setHandlerMap(Collections.singletonMap("/static/**", resourceHandler));
+		resourceUrlProvider.setHandlerMap(Map.of("/static/**", resourceHandler));
 		return resourceUrlProvider;
 	}
 
 
 	@Test
-	public void transform() throws Exception {
+	void transform() throws Exception {
 		this.request = new MockHttpServletRequest("GET", "/static/main.css");
 		Resource css = getResource("main.css");
-		String expected = "\n" +
-				"@import url(\"/static/bar-11e16cf79faee7ac698c805cf28248d2.css?#iefix\");\n" +
-				"@import url('/static/bar-11e16cf79faee7ac698c805cf28248d2.css#bla-normal');\n" +
-				"@import url(/static/bar-11e16cf79faee7ac698c805cf28248d2.css);\n\n" +
-				"@import \"/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css\";\n" +
-				"@import '/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css';\n\n" +
-				"body { background: url(\"/static/images/image-f448cd1d5dba82b774f3202c878230b3.png?#iefix\") }\n";
+		String expected = """
+
+				@import url("/static/bar-11e16cf79faee7ac698c805cf28248d2.css?#iefix");
+				@import url('/static/bar-11e16cf79faee7ac698c805cf28248d2.css#bla-normal');
+				@import url(/static/bar-11e16cf79faee7ac698c805cf28248d2.css);
+
+				@import "/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css";
+				@import '/static/foo-e36d2e05253c6c7085a91522ce43a0b4.css';
+
+				body { background: url("/static/images/image-f448cd1d5dba82b774f3202c878230b3.png?#iefix") }
+				""";
 
 		TransformedResource actual = (TransformedResource) this.transformerChain.transform(this.request, css);
-		String result = new String(actual.getByteArray(), StandardCharsets.UTF_8);
-		result = StringUtils.deleteAny(result, "\r");
-		assertThat(result).isEqualTo(expected);
+		String result = new String(actual.getByteArray(), UTF_8);
+		assertThat(result).isEqualToNormalizingNewlines(expected);
 	}
 
 	@Test
-	public void transformNoLinks() throws Exception {
+	void transformNoLinks() throws Exception {
 		this.request = new MockHttpServletRequest("GET", "/static/foo.css");
 		Resource expected = getResource("foo.css");
 		Resource actual = this.transformerChain.transform(this.request, expected);
@@ -107,31 +109,31 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformExtLinksNotAllowed() throws Exception {
+	void transformExtLinksNotAllowed() throws Exception {
 		this.request = new MockHttpServletRequest("GET", "/static/external.css");
 
 		List<ResourceTransformer> transformers = Collections.singletonList(new CssLinkResourceTransformer());
-		ResourceResolverChain mockChain = Mockito.mock(DefaultResourceResolverChain.class);
+		ResourceResolverChain mockChain = mock();
 		ResourceTransformerChain chain = new DefaultResourceTransformerChain(mockChain, transformers);
 
 		Resource resource = getResource("external.css");
-		String expected = "@import url(\"https://example.org/fonts/css\");\n" +
-				"body { background: url(\"file:///home/spring/image.png\") }\n" +
-				"figure { background: url(\"//example.org/style.css\")}";
+		String expected = """
+				@import url("https://example.org/fonts/css");
+				body { background: url("file:///home/spring/image.png") }
+				figure { background: url("//example.org/style.css")}""";
 
 		TransformedResource transformedResource = (TransformedResource) chain.transform(this.request, resource);
-		String result = new String(transformedResource.getByteArray(), StandardCharsets.UTF_8);
-		result = StringUtils.deleteAny(result, "\r");
-		assertThat(result).isEqualTo(expected);
+		String result = new String(transformedResource.getByteArray(), UTF_8);
+		assertThat(result).isEqualToNormalizingNewlines(expected);
 
-		List<Resource> locations = Collections.singletonList(resource);
-		Mockito.verify(mockChain, Mockito.never()).resolveUrlPath("https://example.org/fonts/css", locations);
-		Mockito.verify(mockChain, Mockito.never()).resolveUrlPath("file:///home/spring/image.png", locations);
-		Mockito.verify(mockChain, Mockito.never()).resolveUrlPath("//example.org/style.css", locations);
+		List<Resource> locations = List.of(resource);
+		verify(mockChain, never()).resolveUrlPath("https://example.org/fonts/css", locations);
+		verify(mockChain, never()).resolveUrlPath("file:///home/spring/image.png", locations);
+		verify(mockChain, never()).resolveUrlPath("//example.org/style.css", locations);
 	}
 
 	@Test
-	public void transformSkippedForNonCssResource() throws Exception {
+	void transformSkippedForNonCssResource() throws Exception {
 		this.request = new MockHttpServletRequest("GET", "/static/images/image.png");
 		Resource expected = getResource("images/image.png");
 		Resource actual = this.transformerChain.transform(this.request, expected);
@@ -140,7 +142,7 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test
-	public void transformSkippedForGzippedResource(GzippedFiles gzippedFiles) throws Exception {
+	void transformSkippedForGzippedResource(GzippedFiles gzippedFiles) throws Exception {
 		gzippedFiles.create("main.css");
 
 		this.request = new MockHttpServletRequest("GET", "/static/main.css");
@@ -152,18 +154,17 @@ public class CssLinkResourceTransformerTests {
 	}
 
 	@Test // https://github.com/spring-projects/spring-framework/issues/22602
-	public void transformEmptyUrlFunction() throws Exception {
+	void transformEmptyUrlFunction() throws Exception {
 		this.request = new MockHttpServletRequest("GET", "/static/empty_url_function.css");
 		Resource css = getResource("empty_url_function.css");
-		String expected =
-				".fooStyle {\n" +
-				"\tbackground: transparent url() no-repeat left top;\n" +
-				"}";
+		String expected = """
+						.fooStyle {
+							background: transparent url() no-repeat left top;
+						}""";
 
 		TransformedResource actual = (TransformedResource) this.transformerChain.transform(this.request, css);
-		String result = new String(actual.getByteArray(), StandardCharsets.UTF_8);
-		result = StringUtils.deleteAny(result, "\r");
-		assertThat(result).isEqualTo(expected);
+		String result = new String(actual.getByteArray(), UTF_8);
+		assertThat(result).isEqualToNormalizingNewlines(expected);
 	}
 
 	private Resource getResource(String filePath) {
